# gamertag_puller

./: .gitignore  Cargo.toml  README.md
src/: cert.der  list.txt  main.rs
src/api/: data.rs  errors.rs  mod.rs  xbox_live.rs
src/utils/: headers.rs  mod.rs
